--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,5 +11,13 @@
       "LabeledStatement",
       "WithStatement"
     ]
-  }
+  },
+  "overrides": [
+    {
+      "files": ["**/*.test.js"],
+      "plugins": ["jest"],
+      "extends": ["plugin:jest/recommended"],
+      "rules": { "jest/prefer-expect-assertions": "off" }
+    }
+  ]
 }
