--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^27.6.1",
     "file-loader": "^6.2.0",
     "jest": "^29.7.0",
     "live-server": "^1.2.1",
