--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "lint": "eslint . --fix",
-    "test": "jest"
+    "test": "jest",
+    "coverage": "jest --coverage --passWithNoTests"
   },
   "author": "coursar",
   "license": "MIT",
